# cointracker

./: .gitignore  README.md  compose.yml  pyproject.toml
cointracker/api/: main.py
cointracker/app/address/: models.py
cointracker/app/data/: db.py
cointracker/app/transaction/: models.py
cointracker/app/user/: models.py
cointracker/commands/: create_db.py  insert_fixtures.py
scripts/: add_fixtures.sh
