[tool.poetry]
name = "cointracker"
version = "0.1.0"
description = ""
authors = ["JC <jc@fractalreef.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.67.0"
uvicorn = "^0.14.0"
databases = "^0.4.3"
asyncpg = "^0.23.0"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
